fix: add display:inline-block to fix a shift of cursor in empty name element

--- a/momentum/style.css
+++ b/momentum/style.css
@@ -48,6 +48,10 @@ body {
   margin-bottom: 3rem;
 }
 
+#name {
+  display: inline-block;
+}
+
 .focus-title {
   margin-bottom: 0.5rem;
   opacity: 0.8;
